--- a/SubnetCalculator/Pages/Index.cshtml
+++ b/SubnetCalculator/Pages/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@using SubnetCalculator.Pages.Model;
+@using SubnetCalculator.Pages.Models;
 @model IndexModel
 @{
     ViewData["Title"] = "Visual Subnet Calculator";
@@ -20,51 +20,52 @@
         <text>@Model.EmptyStringDash</text>
         <input type="number" asp-for="IpAdressSuffix" data-val="true">
         <input type="hidden" asp-for="SubnetCount" value="@Model.SubnetCount">
-        <button class="btn btn-outline-secondary" type="submit">Create</button>
+        <input type="submit" class="btn btn-primary" value="Create">
     </div>
-</form>
 
-<hr />
 
-<table style="width: 70%" border="1" cellpadding="5">
-    <tbody>
-        <tr>
-            <td style="text-align:center">Subnet Adress</td>
-            <td style="text-align:center">Subnet Mask</td>
-            <td style="text-align:center">Range of Adresses</td>
-            <td style="text-align:center">Usable IPs</td>
-            <td style="text-align:center">Hosts</td>
-            <td style="text-align:center">Divide</td>
-            <td style="text-align:center">Join</td>
-        </tr>
-        @{
-            foreach (Subnet value in Model.Subnets)
-            {
-                Model.Counter++;
-                <tr>
-                    <td style="text-align:center">@value.SubnetID</td>
-                    <td style="text-align:center">@value.SubnetMask</td>
-                    <td style="text-align:center">@value.RangeOfAdresses</td>
-                    <td style="text-align:center">@value.UsableIPAdresses</td>
-                    <td style="text-align:center">@value.Hosts</td>
-                    <td style="text-align:center">
-                        @{
-                            if(value.Hosts == 1)
-                            {
-                                <text>Done</text>
+    <hr />
+
+    <table style="width: 70%" border="1" cellpadding="5">
+        <tbody>
+            <tr>
+                <td style="text-align:center">Subnet Adress</td>
+                <td style="text-align:center">Subnet Mask</td>
+                <td style="text-align:center">Range of Adresses</td>
+                <td style="text-align:center">Usable IPs</td>
+                <td style="text-align:center">Hosts</td>
+                <td style="text-align:center">Divide</td>
+                <td style="text-align:center">Join</td>
+            </tr>
+            @{
+                foreach (Subnet value in Model.Subnets)
+                {
+                    <tr>
+                        <td style="text-align:center">@value.SubnetID</td>
+                        <td style="text-align:center">@value.SubnetMask</td>
+                        <td style="text-align:center">@value.RangeOfAdresses</td>
+                        <td style="text-align:center">@value.UsableIPAdresses</td>
+                        <td style="text-align:center">@value.Hosts</td>
+                        <td style="text-align:center">
+                            @{
+                                if(value.Hosts == 1)
+                                {
+                                    <text>Done</text>
+                                }
+                                else
+                                {
+                                    <input type="submit" class="btn btn-primary" value="Divide" asp-page-handler="@Model.Buttons.Buttons[Model.Counter]" />
+                                }
                             }
-                            else
-                            {
-                                <input type="submit" "btn" value="Divide" asp-asp-page-handler="">
-                            }
-                        }
-                    </td>
-                    <td style="text-align:center">TBD</td>
-                </tr>
+                        </td>
+                        <td style="text-align:center">TBD</td>
+                    </tr>
+                    Model.Counter++;
+                }
             }
-        }
-    </tbody>
-</table>
+        </tbody>
+    </table>
+</form>
 
 
 
