--- a/SubnetCalculator/Pages/Index.cshtml
+++ b/SubnetCalculator/Pages/Index.cshtml
@@ -18,54 +18,60 @@
         <text>@Model.EmptyStringDot</text>
         <input class="number" type="text" class="form-control" data-val="true" asp-for="IpAdressFourthByte">
         <text>@Model.EmptyStringDash</text>
-        <input type="number" asp-for="IpAdressSuffix" data-val="true">
-        <input type="hidden" asp-for="SubnetCount" value="@Model.SubnetCount">
-        <input type="submit" class="btn btn-primary" value="Create">
+        <input type="number" asp-for="IpAdressSuffix" data-val="true" />
+        <input type="submit" class="btn btn-primary" value="Create" />
     </div>
-
+</form>
 
     <hr />
 
-    <table style="width: 70%" border="1" cellpadding="5">
-        <tbody>
-            <tr>
-                <td style="text-align:center">Subnet Adress</td>
-                <td style="text-align:center">Subnet Mask</td>
-                <td style="text-align:center">Range of Adresses</td>
-                <td style="text-align:center">Usable IPs</td>
-                <td style="text-align:center">Hosts</td>
-                <td style="text-align:center">Divide</td>
-                <td style="text-align:center">Join</td>
-            </tr>
-            @{
+<table style="width: 70%" border="1" cellpadding="5">
+    <tbody>
+        <tr>
+            <td style="text-align:center">Subnet Adress</td>
+            <td style="text-align:center">Subnet Mask</td>
+            <td style="text-align:center">Range of Adresses</td>
+            <td style="text-align:center">Usable IPs</td>
+            <td style="text-align:center">Hosts</td>
+            <td style="text-align:center">Divide</td>
+            <td style="text-align:center">Join</td>
+        </tr>
+        @{
+            if(Model.Subnets != null)
+            {
                 foreach (Subnet value in Model.Subnets)
                 {
+                    Model.Counter++;
                     <tr>
-                        <td style="text-align:center">@value.SubnetID</td>
+                        <td style="text-align:center">@value.SubnetID<text>/</text>@value.Suffix</td>
                         <td style="text-align:center">@value.SubnetMask</td>
                         <td style="text-align:center">@value.RangeOfAdresses</td>
                         <td style="text-align:center">@value.UsableIPAdresses</td>
                         <td style="text-align:center">@value.Hosts</td>
                         <td style="text-align:center">
                             @{
-                                if(value.Hosts == 1)
+                                if (value.Hosts == 1)
                                 {
                                     <text>Done</text>
                                 }
                                 else
                                 {
-                                    <input type="submit" class="btn btn-primary" value="Divide" asp-page-handler="@Model.Buttons.Buttons[Model.Counter]" />
+                                    <form method="post">
+                                        <input type="hidden" asp-for="Index" value="@Model.Counter" />
+                                        <input type="hidden" asp-for="OldSubnets" value="@Model.OldSubnets" />
+                                        <input type="submit" class="btn btn-primary" value="Divide" asp-page-handler="Button_One"/>
+                                    </form>
                                 }
                             }
                         </td>
                         <td style="text-align:center">TBD</td>
                     </tr>
-                    Model.Counter++;
                 }
             }
-        </tbody>
-    </table>
-</form>
+        }
+    </tbody>
+</table>
+
 
 
 
