--- a/SubnetCalculator/Pages/Index.cshtml
+++ b/SubnetCalculator/Pages/Index.cshtml
@@ -1,12 +1,9 @@
-﻿@page
+﻿@page 
 @using SubnetCalculator.Pages.Models;
 @model IndexModel
 @{
-    ViewData["Title"] = "Visual Subnet Calculator";
     Model.Counter = 0;
 }
-
-<h1>@ViewData["Title"]</h1>
 
 <form method="post">
     <div class="input-group-sm mb-3">
@@ -19,59 +16,82 @@
         <input class="number" type="text" class="form-control" data-val="true" asp-for="IpAdressFourthByte">
         <text>@Model.EmptyStringDash</text>
         <input type="number" asp-for="IpAdressSuffix" data-val="true" />
-        <input type="submit" class="btn btn-primary" value="Create" />
+        <input type="submit" class="btn btn-primary" value="Create" asp-page-handler="OnPost" />
     </div>
 </form>
 
-    <hr />
+<hr />
 
-<table style="width: 70%" border="1" cellpadding="5">
-    <tbody>
-        <tr>
-            <td style="text-align:center">Subnet Adress</td>
-            <td style="text-align:center">Subnet Mask</td>
-            <td style="text-align:center">Range of Adresses</td>
-            <td style="text-align:center">Usable IPs</td>
-            <td style="text-align:center">Hosts</td>
-            <td style="text-align:center">Divide</td>
-            <td style="text-align:center">Join</td>
-        </tr>
-        @{
-            if(Model.Subnets != null)
-            {
-                foreach (Subnet value in Model.Subnets)
+@if (Model.Subnets != null)
+{
+    <table style="width: 91%" border="1" cellpadding="5">
+        <tbody>
+            <tr>
+                <td style="text-align:center">Subnet Adress</td>
+                <td style="text-align:center">Subnet Mask</td>
+                <td style="text-align:center">Range of Adresses</td>
+                <td style="text-align:center">Usable IPs</td>
+                <td style="text-align:center">Hosts</td>
+                <td style="text-align:center">Divide</td>
+                <td style="text-align:center">Join</td>
+            </tr>
+
+        @foreach (Subnet value in Model.Subnets)
+        {
+            <tr>
+                <td style="text-align:center">@value.SubnetID<text>@Model.EmptyStringDash</text>@value.Suffix</td>
+                <td style="text-align:center">@value.SubnetMask</td>
+                <td style="text-align:center">@value.RangeOfAdresses</td>
+                <td style="text-align:center">@value.UsableIPAdresses</td>
+                <td style="text-align:center">@value.Hosts</td>
+                <td style="text-align:center">
+
+                @if (value.Suffix > 31)
                 {
-                    Model.Counter++;
-                    <tr>
-                        <td style="text-align:center">@value.SubnetID<text>/</text>@value.Suffix</td>
-                        <td style="text-align:center">@value.SubnetMask</td>
-                        <td style="text-align:center">@value.RangeOfAdresses</td>
-                        <td style="text-align:center">@value.UsableIPAdresses</td>
-                        <td style="text-align:center">@value.Hosts</td>
-                        <td style="text-align:center">
-                            @{
-                                if (value.Hosts == 1)
-                                {
-                                    <text>Done</text>
-                                }
-                                else
-                                {
-                                    <form method="post">
-                                        <input type="hidden" asp-for="Index" value="@Model.Counter" />
-                                        <input type="hidden" asp-for="OldSubnets" value="@Model.OldSubnets" />
-                                        <input type="submit" class="btn btn-primary" value="Divide" asp-page-handler="Button_One"/>
-                                    </form>
-                                }
-                            }
-                        </td>
-                        <td style="text-align:center">TBD</td>
-                    </tr>
+                    <text>Done</text>
                 }
-            }
-        }
-    </tbody>
-</table>
+                else
+                {
+                    <form method="post">
+                        <input class="number" type="hidden" value="@Model.IpAdressFirstByte" asp-for="IpAdressFirstByte">
+                        <input class="number" type="hidden" value="@Model.IpAdressSecondByte" asp-for="IpAdressSecondByte">
+                        <input class="number" type="hidden" value="@Model.IpAdressThirdByte" asp-for="IpAdressThirdByte">
+                        <input class="number" type="hidden" value="@Model.IpAdressFourthByte" asp-for="IpAdressFourthByte">
+                        <input class="number" type="hidden" value="@Model.IpAdressSuffix" asp-for="IpAdressSuffix">
+                        <input type="hidden" value="@Model.JsonString" asp-for="@Model.JsonString" />
+                        <input type="hidden" value="@Model.Counter" asp-for="@Model.Index" />
+                        <input type="submit" class="btn btn-primary" value="Divide" asp-page-handler="Button_Divide" />
+                    </form>
+                }
+                </td>
+                <td style="text-align:center">
 
+                @if (value.Suffix < 2 || Model.Counter == 0)
+                {
+                    <text>Done</text>
+                }
+                else
+                {
+                    <form method="post">
+                        <input class="number" type="hidden" value="@Model.IpAdressFirstByte" asp-for="IpAdressFirstByte">
+                        <input class="number" type="hidden" value="@Model.IpAdressSecondByte" asp-for="IpAdressSecondByte">
+                        <input class="number" type="hidden" value="@Model.IpAdressThirdByte" asp-for="IpAdressThirdByte">
+                        <input class="number" type="hidden" value="@Model.IpAdressFourthByte" asp-for="IpAdressFourthByte">
+                        <input class="number" type="hidden" value="@Model.IpAdressSuffix" asp-for="IpAdressSuffix">
+                        <input type="hidden" value="@Model.JsonString" asp-for="@Model.JsonString" />
+                        <input type="hidden" value="@Model.Counter" asp-for="@Model.Index" />
+                        <input type="submit" class="btn btn-primary" value="Join" asp-page-handler="Button_Join" />
+                    </form>
+                }
+
+                </td>
+                </tr>
+
+                Model.Counter++;
+            }
+        </tbody>
+    </table>
+}
 
 
 
