--- a/SubnetCalculator/Pages/Index.cshtml
+++ b/SubnetCalculator/Pages/Index.cshtml
@@ -70,7 +70,7 @@
                 </td>
                 <td style="text-align:center">
 
-                @if (value.Suffix < 2 || Model.Counter == 0)
+                @if (value.Suffix < 2)
                 {
                     <text>Done</text>
                 }
@@ -86,7 +86,6 @@
                         <input type="hidden" value="@Model.Counter" asp-for="@Model.Index" />
                         <input type="submit" class="btn btn-primary" value="Join" asp-page-handler="Button_Join" />
                     </form>
-                    
                 }
                 </td>
             </tr>
