--- a/SubnetCalculator/Pages/Index.cshtml
+++ b/SubnetCalculator/Pages/Index.cshtml
@@ -70,7 +70,7 @@
                 </td>
                 <td style="text-align:center">
 
-                @if (value.Suffix < 2)
+                        @if (value.Suffix < 2 || Model.Subnets.Count == 1)
                 {
                     <text>Done</text>
                 }
